# crl-humanoid-ros

./: .clang-format  .clang-format-ignore  .gitignore  LICENSE  README.md
crl_fsm/: CMakeLists.txt  README.md  package.xml
crl_fsm/include/crl_fsm/: blueprint.h  client.h  common.h  fsm.h  partial_state.h  state.h  transitions.h
crl_g1_goalcontroller_py/crl_g1_goalcontroller/: CMakeLists.txt  package.xml
crl_g1_goalcontroller_py/crl_g1_goalcontroller/config/: g1_hardware.yaml  g1_simulator.yaml
crl_g1_goalcontroller_py/crl_g1_goalcontroller/launch/: g1.py  g1_sim.py
crl_g1_goalcontroller_py/crl_g1_goalcontroller/src/: hardware_main.cpp  monitor_main.cpp  simulator_main.cpp
crl_g1_mimiccontroller/: CMakeLists.txt  package.xml
crl_g1_mimiccontroller/config/: g1_hardware_deeptrack.yaml  g1_simulator_deepmimic.yaml  g1_simulator_deeptrack.yaml
crl_g1_mimiccontroller/data/models/g1_getup0_v2/: g1_getup_config.json
crl_g1_mimiccontroller/data/models/g1_getup1_v2/: 2025-09-10_08-48-39_getup1-new-142.onnx
crl_g1_mimiccontroller/data/models/g1_sitdown_v2/: 2025-09-09_08-48-09_sitdown0-new-122.onnx  2025-09-14_08-24-59_sitdown0-new-142-debug.onnx  g1_sitdown_config.json
crl_g1_mimiccontroller/data/models/g1_tennis/: g1_tennis_config.json  model_10000.onnx  model_10000_isdone.onnx
crl_g1_mimiccontroller/include/crl_g1_mimiccontroller/: CRLG1DeepMimicController.h  CRLG1DeepMimicControllerNode.h  CRLG1DeepTrackController.h  CRLG1DeepTrackControllerNode.h  CRLG1GetUpController.h  CRLG1RLControllerNode.h  CRLG1SitDownController.h  CRLG1WalkController.h
crl_g1_mimiccontroller/launch/: g1_deepmimic.py  g1_deeptrack.py  g1_sim_deepmimic.py  g1_sim_deeptrack.py
crl_g1_mimiccontroller/src/: CRLG1DeepMimicController.cpp  CRLG1DeepTrackController.cpp  CRLG1GetUpController.cpp  CRLG1SitDownController.cpp  CRLG1WalkController.cpp  hardware_main_deepmimic.cpp  hardware_main_deeptrack.cpp  monitor_main_deepmimic.cpp  monitor_main_deeptrack.cpp  simulator_main_deepmimic.cpp  simulator_main_deeptrack.cpp
crl_g1_rlcontroller/: CMakeLists.txt  package.xml
crl_g1_rlcontroller/config/: g1_hardware.yaml  g1_hardware_deepmimic.yaml  g1_hardware_v2.yaml  g1_monitor.yaml  g1_simulator.yaml  g1_simulator_v2.yaml
crl_g1_rlcontroller/crl_g1_rlcontroller_commons/: CMakeLists.txt  package.xml
crl_g1_rlcontroller/crl_g1_rlcontroller_commons/src/: CRLG1WalkController.cpp
crl_g1_rlcontroller/crl_g1_rlcontroller_simulator/: CMakeLists.txt  package.xml
crl_g1_rlcontroller/crl_g1_rlcontroller_simulator/config/: g1_sim.yaml
crl_g1_rlcontroller/crl_g1_rlcontroller_simulator/launch/: g1.py
crl_g1_rlcontroller/crl_g1_rlcontroller_simulator/src/: main.cpp
crl_g1_rlcontroller/include/crl_g1_rlcontroller/: CRLG1DeepMimicController.h  CRLG1DeepMimicControllerNode.h  CRLG1GetUpController.h  CRLG1RLControllerNode.h  CRLG1WalkController.h
crl_g1_rlcontroller/launch/: g1.py  g1_sim.py  g1_sim_v2.py  g1_v2.py  wf_tron1a.py
crl_g1_rlcontroller/src/: CRLG1DeepMimicController.cpp  CRLG1GetUpController.cpp  CRLG1SitDownController.cpp  CRLG1WalkController.cpp  hardware_main.cpp  hardware_main_deepmimic.cpp  hardware_main_v2.cpp  monitor_main.cpp  monitor_main_deepmimic.cpp  monitor_main_v2.cpp  simulator_main.cpp  simulator_main_deepmimic.cpp  simulator_main_v2.cpp
crl_humanoid_commons/: CMakeLists.txt  package.xml
crl_humanoid_commons/data/robots/b2/: b2.rbs  b2.rs
crl_humanoid_commons/ext/: CMakeLists.txt
crl_humanoid_commons/ext/crl-basic/: CMakeLists.txt
crl_humanoid_commons/include/crl_humanoid_commons/: RobotData.h  RobotParameters.h
crl_humanoid_commons/src/: CommNode.cpp  EstopNode.cpp  MocapNode.cpp  PyControllerNode.cpp  RobotData.cpp  StarterNode.cpp
crl_humanoid_hardware/: CMakeLists.txt  package.xml
crl_humanoid_hardware/config/: g1_hardware.yaml  tron1a_hardware.yaml  wf_tron1a_hardware.yaml
crl_humanoid_hardware/include/crl_humanoid_hardware/: G1Node.h  Tron1aNode.h  WF_TRON1A.h  WF_TRON1ANode.h
crl_humanoid_hardware/launch/: g1.py  wf_tron1a.py
crl_humanoid_hardware/src/: main.cpp
crl_humanoid_monitor/: CMakeLists.txt  package.xml
crl_humanoid_monitor/config/: g1_monitor.yaml  wf_tron1a_monitor.yaml
crl_humanoid_monitor/include/crl_humanoid_monitor/: MuJoCoMonitorApp.h  MuJoCoMonitorNode.h
crl_humanoid_monitor/src/: main.cpp
crl_humanoid_msgs/: CMakeLists.txt  package.xml
crl_humanoid_msgs/msg/: Control.msg  ExtendedJointControl.msg  Monitor.msg  ProfilingInfo.msg  PyControl.msg  PyState.msg  Remote.msg  Sensor.msg  State.msg
crl_humanoid_msgs/srv/: ElasticBand.srv  Model.srv
crl_humanoid_simulator/: CMakeLists.txt  package.xml
crl_humanoid_simulator/config/: g1_sim.yaml  wf_tron1a_sim.yaml
crl_humanoid_simulator/include/crl_humanoid_simulator/: G1SimNode.h  SimNode.h  WF_TRON1ASimNode.h
crl_humanoid_simulator/launch/: g1.py  wf_tron1a.py
crl_humanoid_simulator/src/: main.cpp
crl_optitrack_ros/optitrack_adaptor/: CMakeLists.txt  package.xml
crl_optitrack_ros/optitrack_adaptor/config/: crl_lab_optitrack.yaml
crl_optitrack_ros/optitrack_adaptor/ext/: CMakeLists.txt
crl_optitrack_ros/optitrack_adaptor/src/: Dispatcher.cpp  NatNetPublisher.cpp  adaptor_runner.cpp
crl_optitrack_ros/optitrack_msgs/: CMakeLists.txt  package.xml
crl_optitrack_ros/optitrack_msgs/msg/: DeviceData.msg  LabelledMarkerData.msg  MarkerSetData.msg  MocapFrameData.msg  RigidbodyData.msg  SkeletonData.msg
crl_ros_helper/: CMakeLists.txt  package.xml
crl_ros_helper/include/crl_ros_helper/: gate.h  meta.hpp  node.h
crl_tron1a_rlcontroller/: CMakeLists.txt  package.xml
crl_tron1a_rlcontroller/config/: params.yaml  wf_tron1a_hardware.yaml  wf_tron1a_monitor.yaml  wf_tron1a_simulator.yaml
crl_tron1a_rlcontroller/include/crl_tron1a_rlcontroller/: CRLTron1ARLControllerNode.h  CRLTron1AWalkController.h  ControllerBase.h  LimXStandNode.h
crl_tron1a_rlcontroller/launch/: wf_tron1a.py  wf_tron1a_sim.py
crl_tron1a_rlcontroller/src/: CRLTron1AWalkController.cpp  LimXStandNode.cpp  WheelfootController.cpp  hardware_main.cpp  monitor_main.cpp  simulator_main.cpp
(+116 files in other folders)
