<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crl_fsm</name>
  <version>0.1.0</version>
  <description>A finite state machine implementation for unitree robots</description>
  <maintainer email="zijhui@student.ethz.ch">zijhui</maintainer>
  <license>ETH Computational Robotics Lab</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>crl_fsm_msgs</depend>
  <depend>crl_ros_helper</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
