<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crl_humanoid_commons</name>
  <version>0.8.0</version>
  <description>ROS package for humanoid robots.</description>
  <maintainer email="kangd@inf.ethz.ch">Dongho Kang</maintainer>
  <license>ETH Computational Robotics Lab</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>crl_humanoid_msgs</build_depend>
  <build_depend>crl_fsm</build_depend>
  <build_depend>crl_ros_helper</build_depend>
  <build_depend>optitrack_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>crl_humanoid_msgs</exec_depend>
  <exec_depend>crl_fsm</exec_depend>
  <exec_depend>crl_ros_helper</exec_depend>
  <exec_depend>optitrack_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
